# ros-gazebo-gym-ws

./: topic_list.txt
.catkin_tools/profiles/default/: devel_collisions.txt
.devcontainer/: devcontainer.json
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/.private/franka_control/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/franka_description/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/franka_example_controllers/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/franka_gazebo/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/franka_gripper/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/franka_hw/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/franka_msgs/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/.private/franka_ros/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/franka_visualization/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/panda_gazebo/: .catkin  .rosinstall  setup.sh  (+1 more)
docker/: Dockerfile
panda_training/: CMakeLists.txt  package.xml
panda_training/config/: panda_training.yaml
panda_training/launch/: load_panda_example_training_params.launch.xml  panda_training_pandp_ppo.launch  panda_training_ppo.launch
panda_training/scripts/: start_panda_pandp_training_ppo.py  start_panda_training_ppo.py
(+937 files in other folders)
