<?xml version="1.0"?>
<package format="2">
  <name>panda_training</name>
  <version>0.0.1</version>
  <description>Training the Panda robot with different algorithms and training protocols.</description>
  <maintainer email="mark.trovinger@gmail.com">rickstaa</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <exec_depend>ros_gazebo_gym</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>franka_gazebo</exec_depend>

  <!-- Python pip dependencies -->
  <exec_depend>python3-gymnasium-pip</exec_depend>
  <exec_depend>python3-gymnasium-robotics-pip</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-stable-baselines3-pip</exec_depend>
  <exec_depend>python3-pytorch-pip</exec_depend>
</package>